--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,16 @@
 name: tool_resource_prediction
+channels:
+- conda-forge
+- default
 dependencies:
 - python=3.9
 - numpy=1.23.1
 - scikit-learn=1.1.0
 - xgboost=1.6.1
-- onnxmltools=1.11.1
+- onnxmltools=1.11.0
 - pandas=1.4.2
 - onnxruntime=1.11.1
 - PyYAML=6.0
 - tqdm=4.64.0
- -seaborn=0.11.2
+- seaborn=0.11.2
 - matplotlib=3.5.2
