--- a/run_configurations/specific.yaml
+++ b/run_configurations/specific.yaml
@@ -1,9 +1,11 @@
 train1:
   model_type: "rf"
-  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
+  dataset_path: "saved_data/testset_trinity-2.9.1_2022_08_29-04_26_09_PM.txt"
+#  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
   is_mixed_data: False
   seed: 0
   model_params:
     n_estimators: 100
     random_state: 0
-    min_samples_leaf: 1
+    max_depth: 2
+#    min_samples_leaf: 1
