--- a/run_configurations/specific.yaml
+++ b/run_configurations/specific.yaml
@@ -1,7 +1,7 @@
 train1:
   model_type: "rf"
-#  dataset_path: "saved_data/testset_trinity-2.9.1_2022_09_08-03_34_56_PM.txt"
-  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
+  dataset_path: "saved_data/testset_trinity-2.9.1_2022_09_12-12_08_58_PM.txt"
+#  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
 #  dataset_path: "../processed_data/example_data/bowtie2_transformed.txt"
 #  dataset_path: "../processed_data/sampled_data/bowtie2-2.3.4.3_5000_samples_seed_0.txt"
   seed: 0
