--- a/run_configurations/specific.yaml
+++ b/run_configurations/specific.yaml
@@ -1,13 +1,34 @@
 train1:
   model_type: "rf"
 #  dataset_path: "saved_data/testset_trinity-2.9.1_2022_09_12-12_24_25_PM.txt"
-#  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
-  dataset_path: "../processed_data/example_data/hisat2_transformed.txt"
+  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
+#  dataset_path: "../processed_data/example_data/hisat2_transformed.txt"
 #  dataset_path: "../processed_data/sampled_data/bowtie2-2.3.4.3_5000_samples_seed_0.txt"
   seed: 0
-  probability_uncertainty: 0.9
+#  probability_uncertainty: 0.9
+  do_cross_validation: True
+  doLogTrafo: False
   model_params:
     n_estimators: 200
     random_state: 0
 #    max_depth: 2
 #    min_samples_leaf: 1
+
+#train2:
+#  model_type: "lr"
+#  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
+#  seed: 0
+#  do_cross_validation: True
+#  model_params:
+#    {}
+
+#train3:
+#  model_type: "svr"
+#  dataset_path: "../processed_data/most_memory_tools/tools_with_trinity/trinity/2.9.1.txt"
+#  seed: 0
+#  do_cross_validation: False
+#  doStandardScale: False
+#  doHPO: False
+#  doLogTrafo: True
+#  model_params:
+#    {}
